Fix title size on mobile

--- a/styles/page.css
+++ b/styles/page.css
@@ -107,7 +107,7 @@ body {
       margin-bottom: 1rem;
 
       > h1 {
-        font-size: 8vw;
+        font-size: 7vw;
       }
     }
   }
